minor patch for fixing dark mode affected layout in wallet

--- a/assets/css/normal.css
+++ b/assets/css/normal.css
@@ -2,7 +2,9 @@
   --primary-color: #ff112d;
   --background-color: #fff;
   --background-color-1: #ff112d;
+  --background-color-2: #fff;
   --text-color: #000;
+  --inv-text-color: #fff;
   --text-brand: #ff4500;
   --nav-col: rgba(255, 255, 255, 0.8);
   /* Other CSS variables for dark mode */
@@ -12,8 +14,10 @@
   --primary-color: #ffffff;
   --background-color: #212121;
   --background-color-1: #303030;
+  --background-color-2: #303030;
   --hover-color: #000000;
   --text-color: #fff;
+  --inv-text-color: #000;
   --text-brand: #fff;
   --nav-col: rgba(0, 0, 0, 0.8);
   /* CSS variables with dark mode styles */
@@ -97,8 +101,19 @@ a:hover {
   color: var(--primary-color);
 }
 
+
+
 .table-cell:hover, .token-entry {
   background-color: var(--background-color-1)!important;
+}
+
+.wallet-container .token-entry{
+	background-color: var(--background-color-2)!important;
+}
+
+.wallet-container .token-entry.head-title{
+	background-color: red!important;
+	color: var(--text-color)!important;
 }
 /*
 
